# libarch

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: main.yml
config/: version.cmake  version.h.j2  version_generator.py
include/: instruction.h  libarch-version.h  libarch.h  register.h  utils.h
include/arm64/: arm64-common.h  arm64-conditions.h  arm64-index-extend.h  arm64-instructions.h  arm64-misc.h  arm64-prefetch-ops.h  arm64-pstate.h  arm64-registers.h  arm64-tlbi-ops.h  arm64-translation.h  arm64-vector-specifiers.h
include/decoder/: branch.h  data-processing-register.h  data-processing.h  load-and-store.h
src/: CMakeLists.txt  MasterVersion  instruction.c  libarch.c  register.c  utils.c
src/decoder/: branch.c  data-processing-register.c  data-processing.c  load-and-store.c
tests/: data-processing-register.arm64  example.arm64  load-store-register-test.arm64  load-store-test.arm64  run_tests.py
tools/: CMakeLists.txt  libarch-debug.c  libarch-version.c
